service.yaml
apiVersion: v1
kind: Service
metadata:
name: brain-tasks-service
labels:
app: brain-tasks
spec:
type: LoadBalancer
selector:
app: brain-tasks
ports:
- port: 80
targetPort: 80
