ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: brain-tasks-ingress
annotations:
kubernetes.io/ingress.class: alb
spec:
rules:
- http:
paths:
- path: /
pathType: Prefix
backend:
service:
name: brain-tasks-service
port:
number: 80
